# mod-utilities

./: Cargo.toml  LICENSE  readme.md
src/: allow_if.rs  count_digits.rs  discard.rs  either.rs  into_result.rs  lib.rs  padding.rs  pod.rs  reduce.rs  take_first.rs  temp.rs  try_extended.rs  un_escape_str.rs  unref.rs  unwrap_pretty.rs  unwrap_unchecked.rs  wrapped_array.rs  write_adaptor.rs  write_indent.rs
src/collections/: bimap.rs  map.rs  mod.rs  named_slot_map.rs  slot_map.rs
